# runtype

./: .clang-format  CMakeLists.txt  README.md  runtype.hpp
include/: runtype.hpp
libs/catch/: CMakeLists.txt
test/: CMakeLists.txt  test_order_preserving_map.cpp  test_runtype.cpp
